# dotfiles4

.config/fish/: config.fish  fish_variables
.config/fish/conf.d/: nnn.fish
.config/fish/functions/: cio.fish  cnf.fish  ddg.fish  dnfsc.fish  gcum.fish  nohup.out  o-record-speakers.fish  sshrubyrose.fish
.config/foot/: colors-seashell.ini  colors-seashell2.ini  foot.ini  tokyonight_day.ini
.config/fuzzel/: appearance-blue-square.ini  appearance-material.ini
.config/nvim/: init.lua  lazy-lock.json  lazyvim.json
.config/nvim/lua/config/: autocmds.lua  keymaps.lua  lazy.lua  (+1 more)
.config/qutebrowser/: autoconfig.yml  config-no-vpn.py  config.py  quickmarks
.config/qutebrowser/bookmarks/: urls
.config/qutebrowser/qsettings/: QtProject.conf
.config/qutebrowser/userscripts/: grokblur.js
.config/sway/: .swp  appearance  appearance-material-teal-light.ini  appearance-orange.ini  appearance-teal.ini  color  color-bluepink  color-bluepink2  color-coolpastel  color-oceansunset  config  config.save  sway-startup  sway-startup.sh  swaybar.json2
.config/swaylock/: config
.config/systemd/user/: deja-dup.service  endor-blog.path  endor-blog.service  radicale.service  sway-startup.service  update-rubyrose.service
.config/tridactyl/themes/: daytime.css  earth.css
.config/waybar/: config-panel.jsonc  config.jsonc  style.css
Projects/dotfiles4/.config/qutebrowser/userscripts/privacypass-lib-0.1.0/src/core/: Cargo.toml
Projects/dotfiles4/.config/qutebrowser/userscripts/privacypass-lib-0.1.0/src/core/src/: batched_memory_stores.rs  client.rs  config.rs  crystal.rs
(+93 files in other folders)
