[package]
name = "kagippcore"
version = "0.1.0"
edition = "2021"
authors = ["Fernando Virdia <fernando@fundamental.domains>"]

[lib]
name = "kagippcore"
crate-type = ["cdylib", "lib"]

[dependencies]
panic_handler = { path = "../panic_handler" }
anyhow = "1.0"
async-trait = "0.1.56"
base64 = "0.22.1"
generic-array = "1.0.0"
rand = "0.8.5"
serde = "1"
sha2 = "0.10.2"
thiserror = "2"
tls_codec = { version = "0.4.1" }
tls_codec_derive = "0.4.0"
voprf = { version = "0.5.0", features = ["serde"] }
p384 = { version = "0.13.0", default-features = false, features = [
  "hash2curve",
  "voprf",
] }
blind-rsa-signatures = "0.15.0"
http = "1"
typenum = "1.15.0"
nom = "7"
hex = { version = "0.4.3", features = ["serde"] }
serde_json = "1.0"

# up to date main as of January 26, 2025: https://github.com/raphaelrobert/privacypass/tree/35207d3bdc2c2d49daa000fd8272ec683ee3cb59
privacypass = { git = "https://github.com/raphaelrobert/privacypass", rev = "35207d3", features = ["kat"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.20.0", features = ["full"] }
